Fix filter display on mobile.

--- a/src/app/styles/components/partials/_input-radio.scss
+++ b/src/app/styles/components/partials/_input-radio.scss
@@ -10,6 +10,7 @@ input[type="radio"] {
     height: pxToRem(24);
     line-height: pxToRem(24);
     padding: 0px pxToRem(10);
+    margin-bottom: pxToRem(4);
 
     &:hover {
       cursor: pointer;
